new line + emoji

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 
 <body class="container">
 		<h1>Алексей Мульганов</h1>
-		<h2>QA-студент</h2>
+		<h2>На пути к мечте</h2>
 
 		<div class="item">
 			<img class="photo" src="me1.jpg" width="170" height="170" alt="фото">
 		</div>
 
-			<p>Место для крутого статуса</p>
+			<p>QA</p>
+			<p>Усердно учусь</p>
 
-			<h2>Обо мне</h2>
+			<h2>Связаться</h2>
 
 			<div class="contacts">
 
