--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Alex Mulganov</title>
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body class="container">
@@ -11,7 +11,7 @@
 		<h2>На пути к мечте</h2>
 
 		<div class="item">
-			<img class="photo" src="me1.jpg" width="170" height="170" alt="фото">
+			<img class="photo" src="img/me1.jpg" width="170" height="170" alt="фото">
 		</div>
 
 			<p>QA</p>
@@ -28,7 +28,7 @@
 				<a href="https://github.com/alexeyMulganov-qa">github</a>
 			</div>
 				<button type="button" class=b1>Девиз</button>
-				<script type="text/javascript" src="js.js"></script>
+				<script type="text/javascript" src="js/js.js"></script>
 
 </body>
 
