--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 
 <body class="container">
 		<h1>Алексей Мульганов</h1>
-		<h2>На пути к мечте</h2>
+		<h2>Junior QA</h2>
 
 		<div class="item">
 			<img class="photo" src="img/me1.jpg" width="170" height="170" alt="фото">
 		</div>
 
-			<p>QA</p>
-			<p>Усердно учусь</p>
-
-			<h2>Связаться</h2>
+				
+			<h3>Связаться</h3>
 
 			<div class="contacts">
 
